...
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/walking_time_label"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/button_walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:text="@string/walk_activity_start_walk"
        app:layout_constraintBottom_toBottomOf="parent"
...
